[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-async-benchmark"
version = "0.1.0"
description = "pytest-async-benchmark: Modern pytest benchmarking for async code. 🚀"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Mihai Farcas", email = "contact@mihai.ltd" },
]
dependencies = [
    "pytest>=8.3.5",
    "rich>=14.0.0",
]


[project.entry-points."pytest11"]
async_bench = "pytest_async_benchmark.plugin"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "quart>=0.20.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.12.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
